  correct  bug introduce in 04/12 change
  a new graphic FreeFem++-cs: integrated development environment (located in src/ide)
  see REAME and maunal-full.pdf
  add new examples++-tutorial
  mat_interpol.edp  # to test interpolate function
  shur-comp.edp  # a shur complement domaine decomposition

11/12/2004
 TAG release_1_44
 now the current version is 1.45

29/12/2004  
   add concat operator # in macro generator.

04/01/2005
   add new quadrature formular on edge (a,b) :qf1pElump  : 1/2(f(a)+f(b))*length(ab)

05/01/2005
  correction bug  unset FE variable dans le .edp   =>
  use a null pointeur (in sol) to set the *X  array in  problem.cpp
   (*X)[K(df)]= (*sol[kfe])[SK(kdf)] ;  
   make some time make a seg trap error. 
06/01/2005
   rewrite the macro generation tool to be more to suppress some bug
   in argument subtition
   correct error in line numbering in case of newline in string
   cosmetic change in output 

20/01/2005
   count () in macro parameter to handle   couple of () in macro parameter.
   macro sum(a,b) (a+b); 
   sum((1),2) // now works and given (1)+2
   sum(atan2(2,1),2) // now works and given atan2(2,1)+2
   
   correct bug in linear combination of sparce matrix:
   the correction is:
    change line 1069, in file MatriceCreuse_tpl.hpp
           mij[make_pair(i,j)] = coef*a[k];
    to
           mij[make_pair(i,j)] += coef*a[k];
    
    Correct a segfault if second derivative of test function exist in 
    problem definition.  The Change in problem.cpp:
    resize : KN<double> buf(Vh.MaximalNbOfDF()*3*Vh.N);
    to     : KN<double> buf(Vh.MaximalNbOfDF()*last_operatortype*Vh.N);

   
24/01/2005
   add  named parameter nbtx=..  in buildmesh  function to change the default 
   maximal number of vertex in the build mesh.

26/01/2005
   correct pb with  --disable-pdf in configure.ac
   correct pdflatex and latex compilation 
   correct  FreeFem++.app probleme when usind in a shell script FreeFem++-CoCoa
   